tests/common/snapshots/e2e_tests__common__visual_testing__LSP Rename__rename_complete.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 [No Name]*                                                                     
    1 │ fn calculate(amount: i32) -> i32 {                                     █
    2 │     let result = amount * 2;                                           █
    3 │     println!("Value: {}", amount);                                     █
    4 │     result                                                             █
    5 │ }                                                                      █
    6 │                                                                        █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 5, Col 0 | Cannot rename in unsaved buffer   Palette: Ctrl+P
